<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_version">2.1.1920</string>
    
    <string name="app_about">关于</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_about_title">版本</string>
        
    
    <string name="app_name">Words</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">Start</string>
    <string name="cur_count_start">当前运行第</string>
    <string name="cur_count_end">个case</string>
    <string name="cur_count">0</string>
    <string name="delete">Delete</string>
    <string name="pause">Pause</string>
    <string name="conti">Continue</string>
    <string name="continue_last">Rerun</string>
    <string name="last_run_failed">本地有未上传的结果文件</string>
    <string name="upload">Upload</string>
    <string name="edit_text_box_hint"></string>
    
    <!-- 上传dialog -->
    <string name="upload_result_failed">上传结果文件失败！</string>
    <string name="upload_result_retry">是否重新上传？</string>
	<string name="upload_result_btn_retry">Retry</string>
	<string name="upload_result_btn_delete">Delete</string>
	<string name="upload_result_fail_warn">可能是网络问题导致上传不成功，请直接将结果拷贝出来！</string>
	<string name="upload_success">上传成功！</string>
	
	<!-- configActivity -->
	<string name="config_radio_complete_no_choice">输入拼音串，但完全不上屏</string>
	<string name="config_radio_choice_first_candidate">只上首选，使输入法学词，清除上下文关系</string>
	<string name="config_radio_choice_first_screen">在首屏找目标词，并上屏，遇分隔符清除上下文</string>
	<string name="config_radio_keyboard_qwerty">26键盘</string>
	<string name="config_radio_keyboard_nine">9键盘</string>
	<string name="config_radio_keyboard_hand_writing">手写键盘</string>
	<string name="connect">连接</string>
	<string name="bluetooth_keyboard_warn">测试过程中需要蓝牙键盘，请连接</string>
	<string name="config_toggle_clearContext">评测集之间是否重置输入法</string>
	<string name="choose_target_ime_warn">请切换要测试的输入法</string>
	<string name="switch_ime">去切换</string>
	<string name="config_step_one">第一步</string>
	<string name="config_step_two">第二步</string>
	<string name="config_step_thr">第三步</string>
	<string name="next_step">下一步</string>
	
	<!-- adaptActivity -->
	<string name="adapt_choose_keyboard_type">开始适配，请选择键盘类型</string>
	<string name="adapt_have_you_choosed_keyboard_type">你选择了键盘没有？</string>
	<string name="adapt_status_prefix">开始适配</string>
	<string name="adapt_status_suffix">键</string>
	<string name="adapt_guide_prefix">点击</string>
	<string name="adapt_guide_suffix">键</string>
	<string name="adapt_guide_complete">适配完成，请切换键盘</string>
	<string name="adapt_guide_candidate_measure">请选择第一个候选</string>
	
	<!-- Toast -->
    <string name="toast_probe_failed">探测失败，请重试！</string>
    <string name="toast_config_missing">没有获取到配置文件，退出！</string>
    
</resources>