<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditActivity" >

    <com.michael.words.EditTextView
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textbox"
        android:hint="@string/edit_text_box_hint"
        android:imeOptions="flagNoExtractUi" ></com.michael.words.EditTextView>"

    <Button
        android:id="@+id/button_pause"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button_start"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@+id/button_start"
        android:background="@drawable/button_red_bg"
        android:text="@string/pause"
        android:textColor="@drawable/btn_words_color" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/button_green_bg"
        android:text="@string/start"
        android:textColor="@drawable/btn_words_color" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button_start"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/button_start"
        android:background="@drawable/button_blue_bg"
        android:text="@string/delete"
        android:textColor="@drawable/btn_words_color" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp" >

        <TextView
            android:id="@+id/textView_cur_count_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cur_count_start" />

        <TextView
            android:id="@+id/textView_cur_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cur_count" />

        <TextView
            android:id="@+id/textView_cur_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cur_count_end" />
    </LinearLayout>

</RelativeLayout>